# grpc-proxy-demo

./: Dockerfile  README.md  docker-compose.yml  envoy.yaml  pyproject.toml  test.proto
grpc_sample/: client.py  server.py
grpc_sample/grpclib/: test_pb2.py  test_pb2_grpc.py
tests/: test_grpc_sample.py
